Fix navbar not displaying on mobile.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -49,6 +49,7 @@ h1, h2, h3, h4 {
 }
 
 .container {
+  position: relative;
   top: 0;
   left: 0;
   bottom: 100%;
